--- a/package.json
+++ b/package.json
@@ -7,23 +7,60 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test-preview": "npx jest-preview",
+    "graphql-server": "json-graphql-server db.cjs --port 4000",
+    "websockets": "node server.js",
+    "codegen":"npx graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@sentry/react": "^8.26.0",
+    "@sentry/vite-plugin": "^2.22.2",
+    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-query-devtools": "^5.52.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "axios": "^1.7.5",
+    "cors": "^2.8.5",
+    "json-server": "^1.0.0-beta.2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "react-window": "^1.8.10",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^2.0.5",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "fishery": "^2.2.2",
     "globals": "^15.9.0",
+    "jest-preview": "^0.3.1",
+    "jsdom": "^24.1.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^2.0.5"
   }
 }
